--- a/Frontend/public/dettaglio_account_azienda.html
+++ b/Frontend/public/dettaglio_account_azienda.html
@@ -70,7 +70,8 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="username">Utente</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-username" type="text" readonly class="base-shield">
+                                <input id="detail-username" name="account_username" type="text" readonly
+                                    class="base-shield" autocomplete="off">
                                 <button class="glass-field-btn copy-btn">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
@@ -81,7 +82,8 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="account_code">Account / Codice</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-account" type="text" readonly class="base-shield">
+                                <input id="detail-account" name="account_code" type="text" readonly class="base-shield"
+                                    autocomplete="off">
                                 <button class="glass-field-btn copy-btn">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
@@ -114,8 +116,8 @@
                         <div class="glass-field-container">
                             <span class="view-label" data-t="password">Password</span>
                             <div class="glass-field border-glow">
-                                <input id="detail-password" type="text" readonly
-                                    class="base-shield field-value-password">
+                                <input id="detail-password" name="account_password" type="password" readonly
+                                    class="base-shield field-value-password" autocomplete="new-password">
                                 <button id="toggle-password" class="glass-field-btn">
                                     <span class="material-symbols-outlined">visibility</span>
                                 </button>
