--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -70,7 +70,8 @@
                             <label class="view-label" for="detail-nomeAccount" data-t="account_name">Nome
                                 Account</label>
                             <div class="detail-field-box border-glow">
-                                <input id="detail-nomeAccount" readonly class="detail-field-input no-transform">
+                                <input id="detail-nomeAccount" name="account_name" readonly
+                                    class="detail-field-input no-transform" autocomplete="off">
                                 <button class="btn-icon-header copy-btn" type="button">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
@@ -81,8 +82,8 @@
                         <div class="glass-field-container">
                             <label class="view-label" for="detail-username" data-t="username">Utente</label>
                             <div class="detail-field-box border-glow">
-                                <input id="detail-username" type="text" readonly
-                                    class="detail-field-input base-shield no-transform">
+                                <input id="detail-username" name="account_username" type="text" readonly
+                                    class="detail-field-input no-transform" autocomplete="off">
                                 <button class="btn-icon-header copy-btn" type="button">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
@@ -94,8 +95,8 @@
                             <label class="view-label" for="detail-account" data-t="account_code">Account /
                                 Codice</label>
                             <div class="detail-field-box border-glow">
-                                <input id="detail-account" type="text" readonly
-                                    class="detail-field-input base-shield no-transform">
+                                <input id="detail-account" name="account_code" type="text" readonly
+                                    class="detail-field-input no-transform" autocomplete="off">
                                 <button class="btn-icon-header copy-btn" type="button">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
@@ -106,8 +107,9 @@
                         <div class="glass-field-container">
                             <label class="view-label" for="detail-password" data-t="password">Password</label>
                             <div class="detail-field-box border-glow">
-                                <input id="detail-password" type="text" readonly
-                                    class="detail-field-input base-shield field-value-password no-transform">
+                                <input id="detail-password" name="account_password" type="password" readonly
+                                    class="detail-field-input base-shield field-value-password no-transform"
+                                    autocomplete="new-password">
                                 <div class="detail-field-actions">
                                     <button id="toggle-password" class="btn-icon-header" type="button">
                                         <span class="material-symbols-outlined">visibility</span>
@@ -135,6 +137,31 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Suggerimento Conto Bancario -->
+                        <div id="add-banking-prompt" class="banking-prompt-box hidden">
+                            <button type="button" id="btn-banking-info" class="btn-banking-info">
+                                <span class="material-symbols-outlined info-icon">info</span>
+                                <span class="info-text" data-t="visual_identity">Aggiungi conto bancario</span>
+                            </button>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Coordinate Bancarie (Sezione Dinamica) -->
+                <section id="section-banking" class="mt-8 hidden">
+                    <div class="detail-section-header justify-between">
+                        <div class="flex-center-gap">
+                            <span
+                                class="material-symbols-outlined detail-section-icon icon-accent-emerald">account_balance</span>
+                            <h3 class="detail-section-title" data-t="finance_iban">Coordinate Bancarie</h3>
+                        </div>
+                        <button id="banking-toggle" type="button" class="btn-icon-header cursor-pointer">
+                            <span id="banking-chevron"
+                                class="material-symbols-outlined text-white/20 transition-transform">expand_more</span>
+                        </button>
+                    </div>
+                    <div id="banking-content" class="flex-col-gap mt-4 hidden">
+                        <!-- Banking cards injected here -->
                     </div>
                 </section>
 
