Refactor pagine account azienda: allineamento Protocollo Titanium V3.1, fix puntina card e CSP compliance

--- a/Frontend/public/notifiche_storia.html
+++ b/Frontend/public/notifiche_storia.html
@@ -1,93 +1,1 @@
-<!DOCTYPE html>
-<html lang="it" class="dark">
-
-<head>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
-    <meta charset="utf-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Storico Notifiche - PROTOCOLLO BASE V3.6</title>
-
-    <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.6" />
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-    <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
-
-    <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
-</head>
-
-<body class="base-bg">
-    <div class="base-container relative">
-        <!-- Ambient Glow -->
-        <div class="base-glow"></div>
-
-        <!-- Automated Header -->
-        <header id="header-placeholder" class="base-header"></header>
-
-        <div class="spacer-header"></div>
-
-        <!-- Main Content -->
-        <main class="base-main min-h-screen">
-            <div class="detail-content-wrap pb-20">
-
-                <div class="flex items-center justify-between mb-8 px-1">
-                    <div class="flex-col">
-                        <h2 class="text-2xl font-black text-white leading-tight">Storico Notifiche</h2>
-                        <p class="text-xs font-bold text-white/40 uppercase tracking-[0.2em] mt-1">I tuoi avvisi recenti
-                        </p>
-                    </div>
-                    <button id="btn-clear-history"
-                        class="size-10 rounded-xl bg-red-500/10 border border-red-500/20 text-red-500 flex-center transition-all hover:scale-105 active:scale-95">
-                        <span class="material-symbols-outlined text-xl">delete_sweep</span>
-                    </button>
-                </div>
-
-                <!-- Status Indicators -->
-                <div id="loading-indicator" class="flex-center-col py-20 gap-4">
-                    <div class="size-10 border-4 border-white/5 border-t-blue-500 rounded-full animate-spin shadow-lg">
-                    </div>
-                    <span
-                        class="text-[10px] font-black uppercase text-white/40 tracking-widest">Sincronizzazione...</span>
-                </div>
-
-                <div id="empty-state"
-                    class="flex-center-col py-20 px-10 text-center hidden animate-in fade-in duration-500">
-                    <div
-                        class="size-20 rounded-[2.5rem] bg-white/5 border border-white/10 flex-center text-white/10 mb-6 glass-card shadow-2xl">
-                        <span class="material-symbols-outlined text-4xl">notifications_off</span>
-                    </div>
-                    <h3 class="text-lg font-black text-white/80 uppercase">Nessuna Notifica</h3>
-                    <p class="text-xs font-bold text-white/20 uppercase tracking-widest mt-2 leading-relaxed">Il tuo
-                        archivio è vuoto. <br>Gli avvisi futuri appariranno qui.</p>
-                </div>
-
-                <!-- Notifications Grid/List -->
-                <div id="notifications-list" class="flex flex-col gap-3 min-h-[300px]">
-                    <!-- Injected via JS -->
-                </div>
-
-                <div class="h-20"></div>
-
-            </div>
-        </main>
-
-        <!-- FOOTER PLACEHOLDER -->
-        <footer id="footer-placeholder" class="base-header"></footer>
-    </div>
-
-    <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.6"></script>
-    <script type="module" src="assets/js/notifiche_storia.js?v=3.6"></script>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="it" class="dark"> <head> <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;"> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"> <title>Storico Notifiche - PROTOCOLLO BASE V3.6</title> <!-- PWA / Mobile Capable --> <link rel="manifest" href="manifest.json?v=3.6" /> <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png"> <meta name="mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts --> <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.6) --> <link rel="stylesheet" href="assets/css/operatore.css?v=3.6"> <!-- CORE JS --> <script src="assets/js/core.js?v=3.6"></script> <script type="module" src="assets/js/ui-core.js?v=3.6"></script> </head> <body class="base-bg"> <div class="base-container relative"> <!-- Ambient Glow --> <div class="base-glow"></div> <!-- Automated Header --> <header id="header-placeholder" class="base-header"></header> <div class="spacer-header"></div> <!-- Main Content --> <main class="base-main min-h-screen"> <div class="detail-content-wrap pb-20"> <div class="flex items-center justify-between mb-8 px-1"> <div class="flex-col"> <h2 class="text-2xl font-black text-white leading-tight">Storico Notifiche</h2> <p class="text-xs font-bold text-white/40 uppercase tracking-[0.2em] mt-1">I tuoi avvisi recenti </p> </div> <button id="btn-clear-history" class="size-10 rounded-xl bg-red-500/10 border border-red-500/20 text-red-500 flex-center transition-all hover:scale-105 active:scale-95"> <span class="material-symbols-outlined text-xl">delete_sweep</span> </button> </div> <!-- Status Indicators --> <div id="loading-indicator" class="flex-center-col py-20 gap-4"> <div class="size-10 border-4 border-white/5 border-t-blue-500 rounded-full animate-spin shadow-lg"> </div> <span class="text-[10px] font-black uppercase text-white/40 tracking-widest">Sincronizzazione...</span> </div> <div id="empty-state" class="flex-center-col py-20 px-10 text-center hidden animate-in fade-in duration-500"> <div class="size-20 rounded-[2.5rem] bg-white/5 border border-white/10 flex-center text-white/10 mb-6 glass-card shadow-2xl"> <span class="material-symbols-outlined text-4xl">notifications_off</span> </div> <h3 class="text-lg font-black text-white/80 uppercase">Nessuna Notifica</h3> <p class="text-xs font-bold text-white/20 uppercase tracking-widest mt-2 leading-relaxed">Il tuo archivio è vuoto. <br>Gli avvisi futuri appariranno qui.</p> </div> <!-- Notifications Grid/List --> <div id="notifications-list" class="flex flex-col gap-3 min-h-[300px]"> <!-- Injected via JS --> </div> <div class="h-20"></div> </div> </main> <!-- FOOTER PLACEHOLDER --> <footer id="footer-placeholder" class="base-header"></footer> </div> <!-- Scripts --> <script type="module" src="assets/js/main.js?v=3.6"></script> <script type="module" src="assets/js/notifiche_storia.js?v=3.6"></script> </body> </html>
