--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -1,76 +1,1 @@
-<!DOCTYPE html>
-<html lang="it">
-
-<head>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title data-t="account_private">Account Privati - PROTOCOLLO BASE</title>
-
-    <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.4" />
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-    <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css?v=3.4">
-    <!-- Design System Master (PROTOCOLLO BASE V3.4) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.4">
-
-    <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.4"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.4"></script>
-</head>
-
-<body class="base-bg">
-    <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
-    <div class="base-container">
-
-        <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
-        <div class="base-glow"></div>
-
-        <!-- HEADER FISSO (Protocollo v3.1 Balanced) -->
-        <header id="header-placeholder" class="base-header"></header>
-
-        <div class="spacer-header"></div>
-
-        <!-- Main Content (PROTOCOLLO BASE Main Strategy) -->
-        <main class="base-main">
-
-            <!-- SEARCH BAR (Standard PROTOCOLLO BASE UI) -->
-            <div class="search-container">
-                <label for="account-search" class="sr-only">Cerca account</label>
-                <div class="glass-field search-field-box">
-                    <span class="material-symbols-outlined opacity-50">search</span>
-                    <input type="search" id="account-search" placeholder="Cerca account o credenziali..."
-                        data-t-placeholder="search_placeholder" autocomplete="off" class="search-input-field">
-                </div>
-            </div>
-
-            <!-- ACCOUNTS CONTAINER -->
-            <div id="accounts-container" class="micro-account-list">
-                <!-- Loading Spinner -->
-                <div class="loading-full-box">
-                    <span class="material-symbols-outlined animate-spin loading-spinner-icon">sync</span>
-                    <p data-t="loading_data">Caricamento...</p>
-                </div>
-            </div>
-
-        </main>
-
-        <div class="spacer-footer"></div>
-
-        <!-- FOOTER PREMIUM -->
-        <footer id="footer-placeholder" class="base-footer"></footer>
-
-    </div>
-
-    <!-- SCRIPTS MODULARI -->
-    <script type="module" src="assets/js/main.js?v=3.4"></script>
-    <script type="module" src="assets/js/account_privati.js?v=3.4"></script>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="it"> <head> <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' ; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;"> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> <title data-t="account_private">Account Privati - PROTOCOLLO BASE</title> <!-- PWA / Mobile Capable --> <link rel="manifest" href="manifest.json?v=3.4" /> <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png"> <meta name="mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts --> <link rel="stylesheet" href="assets/css/fonts.css?v=3.4"> <!-- Design System Master (PROTOCOLLO BASE V3.4) --> <link rel="stylesheet" href="assets/css/operatore.css?v=3.4"> <!-- CORE JS --> <script src="assets/js/core.js?v=3.4"></script> <script type="module" src="assets/js/ui-core.js?v=3.4"></script> </head> <body class="base-bg"> <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) --> <div class="base-container"> <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) --> <div class="base-glow"></div> <!-- HEADER FISSO (Protocollo v3.1 Balanced) --> <header id="header-placeholder" class="base-header"></header> <div class="spacer-header"></div> <!-- Main Content (PROTOCOLLO BASE Main Strategy) --> <main class="base-main"> <!-- SEARCH BAR (Standard PROTOCOLLO BASE UI) --> <div class="search-container"> <label for="account-search" class="sr-only">Cerca account</label> <div class="glass-field search-field-box"> <span class="material-symbols-outlined opacity-50">search</span> <input type="search" id="account-search" placeholder="Cerca account o credenziali..." data-t-placeholder="search_placeholder" autocomplete="off" class="search-input-field"> </div> </div> <!-- ACCOUNTS CONTAINER --> <div id="accounts-container" class="micro-account-list"> <!-- Loading Spinner --> <div class="loading-full-box"> <span class="material-symbols-outlined animate-spin loading-spinner-icon">sync</span> <p data-t="loading_data">Caricamento...</p> </div> </div> </main> <div class="spacer-footer"></div> <!-- FOOTER PREMIUM --> <footer id="footer-placeholder" class="base-footer"></footer> </div> <!-- SCRIPTS MODULARI --> <script type="module" src="assets/js/main.js?v=3.4"></script> <script type="module" src="assets/js/account_privati.js?v=3.4"></script> </body> </html>
