--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Le Mie Aziende - PROTOCOLLO BASE V3.6</title>
+    <title>Le Mie Aziende - PROTOCOLLO BASE V3.7</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.6" />
+    <link rel="manifest" href="manifest.json?v=5.3" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,12 +18,12 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
+    <!-- Design System Master (PROTOCOLLO BASE V5.3) -->
+    <link rel="stylesheet" href="assets/css/operatore.css?v=5.3">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
+    <script src="assets/js/core.js?v=5.3"></script>
+    <script type="module" src="assets/js/ui-core.js?v=5.3"></script>
 </head>
 
 <body class="base-bg">
@@ -40,7 +40,7 @@
         <main class="base-main">
             <div class="flex-col-gap-6">
                 <!-- Companies List Container -->
-                <div id="aziende-list-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div id="aziende-list-container" class="content-matrix-grid aziende-grid-gap">
                     <!-- Loading Spinner -->
                     <div class="col-span-full flex-center-col py-20 opacity-20">
                         <span class="material-symbols-outlined text-4xl animate-pulse">sync</span>
@@ -52,13 +52,14 @@
         </main>
 
         <div class="spacer-footer"></div>
+
         <!-- FOOTER PLACEHOLDER -->
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.6"></script>
-    <script type="module" src="assets/js/lista_aziende.js?v=3.6"></script>
+    <script type="module" src="assets/js/main.js?v=5.3"></script>
+    <script type="module" src="assets/js/lista_aziende.js?v=5.3"></script>
 </body>
 
 </html>
