--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -1,94 +1,1 @@
-<!DOCTYPE html>
-<html lang="it" class="dark protocol-forced-dark">
-
-<head>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' 'unsafe-inline' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Codici & Password - Password Dimenticata</title>
-
-    <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.3" />
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-    <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
-
-    <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
-</head>
-
-<body class="base-bg">
-    <!-- 1. WRAPPER PRINCIPALE -->
-    <div class="base-container auth-viewport">
-
-        <!-- 2. FARO (Glow Effect) -->
-        <div class="base-glow"></div>
-
-        <!-- 3. VAULT CONTAINER -->
-        <div class="auth-vault">
-
-            <!-- Card Reset -->
-            <div class="auth-card border-glow">
-                <!-- SAETTA MASTER ANIMATION -->
-                <div class="saetta-master"></div>
-                <div class="saetta-drop"></div>
-
-                <!-- Icona Centrale -->
-                <div class="auth-icon-box">
-                    <span class="material-symbols-outlined">lock_reset</span>
-                </div>
-
-                <!-- Titoli -->
-                <h1 class="auth-title" data-t="reset_page_title">Recupera Password</h1>
-                <p class="auth-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
-
-                <!-- Form Recupero -->
-                <form id="reset-form">
-
-                    <!-- Email -->
-                    <div class="auth-form-group">
-                        <label class="auth-label" for="email" data-t="email_address_label">Email dell'account</label>
-                        <input id="email" name="email" type="email" autocomplete="email" required class="auth-input"
-                            data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
-                    </div>
-
-                    <!-- Submit Button -->
-                    <button type="submit" id="reset-submit-btn" class="auth-btn-primary" data-t="send_instructions_btn">
-                        <span class="material-symbols-outlined">send</span>
-                        Invia email
-                    </button>
-
-                </form>
-
-                <!-- Back Link -->
-                <div class="auth-back-link-box">
-                    <a href="index.html" data-t="back_to_login_link">
-                        <span class="material-symbols-outlined">arrow_back</span>
-                        Torna al Login
-                    </a>
-                </div>
-
-                <!-- Footer Legale -->
-                <div class="legal-footer">
-                    <span>&copy; 2026</span>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=3.3"></script>
-    <script type="module" src="assets/js/reset_password.js?v=3.3"></script>
-
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="it" class="dark protocol-forced-dark"> <head> <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' ; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;"> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> <title>Codici & Password - Password Dimenticata</title> <!-- PWA / Mobile Capable --> <link rel="manifest" href="manifest.json?v=3.3" /> <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png"> <meta name="mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-capable" content="yes"> <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts --> <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.3) --> <link rel="stylesheet" href="assets/css/operatore.css?v=3.3"> <!-- CORE JS --> <script src="assets/js/core.js?v=3.3"></script> <script type="module" src="assets/js/ui-core.js?v=3.3"></script> </head> <body class="base-bg"> <!-- 1. WRAPPER PRINCIPALE --> <div class="base-container auth-viewport"> <!-- 2. FARO (Glow Effect) --> <div class="base-glow"></div> <!-- 3. VAULT CONTAINER --> <div class="auth-vault"> <!-- Card Reset --> <div class="auth-card border-glow"> <!-- SAETTA MASTER ANIMATION --> <div class="saetta-master"></div> <div class="saetta-drop"></div> <!-- Icona Centrale --> <div class="auth-icon-box"> <span class="material-symbols-outlined">lock_reset</span> </div> <!-- Titoli --> <h1 class="auth-title" data-t="reset_page_title">Recupera Password</h1> <p class="auth-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p> <!-- Form Recupero --> <form id="reset-form"> <!-- Email --> <div class="auth-form-group"> <label class="auth-label" for="email" data-t="email_address_label">Email dell'account</label> <input id="email" name="email" type="email" autocomplete="email" required class="auth-input" data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com"> </div> <!-- Submit Button --> <button type="submit" id="reset-submit-btn" class="auth-btn-primary" data-t="send_instructions_btn"> <span class="material-symbols-outlined">send</span> Invia email </button> </form> <!-- Back Link --> <div class="auth-back-link-box"> <a href="index.html" data-t="back_to_login_link"> <span class="material-symbols-outlined">arrow_back</span> Torna al Login </a> </div> <!-- Footer Legale --> <div class="legal-footer"> <span>&copy; 2026</span> </div> </div> </div> </div> <!-- Scripts --> <script type="module" src="assets/js/main.js?v=3.3"></script> <script type="module" src="assets/js/reset_password.js?v=3.3"></script> </body> </html>
